<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/ingredientsLayout"
  android:layout_width="match_parent"
  android:layout_height="wrap_content">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingLeft="5dp"
    android:paddingTop="10dp"
    android:paddingRight="5dp"
    android:weightSum="1">
    <TextView
      android:id="@+id/Quantity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.2"
      android:paddingStart="0dp"
      android:paddingEnd="2dp"
      android:text="@string/_269"
      android:textAlignment="textEnd" />
    <TextView
      android:id="@+id/Measure"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.1"
      android:text="@string/gms"
      android:textAlignment="textStart"
      android:textSize="12sp" />
    <TextView
      android:id="@+id/Ingredient"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_weight="0.7"
      android:fontFamily="sans-serif-medium"
      android:paddingStart="5dp"
      android:paddingEnd="2dp"
      android:text="@string/ingredient" />

  </LinearLayout>


</FrameLayout>

